assgn3/bharat/calc.output
Grammar

    0 $accept: Program $end

    1 Program: Program_element

    2 Program_element: Function Program_element
    3                | Declaration Program_element
    4                | %empty

    5 Declaration: Type Declarator_list ';'

    6 Declarator_list: Declarator_list ',' Declarator
    7                | Declarator_list ',' Declarator '=' Initializer
    8                | Declarator
    9                | Declarator '=' Initializer

   10 Initializer: Expression
   11            | '{' Initializer_list '}'
   12            | '{' Initializer_list ',' '}'

   13 Initializer_list: Initializer_list ',' Initializer
   14                 | Initializer

   15 Declarator: Pointer Simple_declarator
   16           | Simple_declarator

   17 Pointer: '*'
   18        | '*' Pointer

   19 Simple_declarator: IDENTIFIERS
   20                  | '(' Declarator ')'
   21                  | Simple_declarator '[' ']'
   22                  | Simple_declarator '[' Expression ']'

   23 Expression_list: Expression
   24                | Expression_list ',' Expression

   25 Expression: Pl1
   26           | Unary_expression '=' Expression

   27 Pl1: Pl2
   28    | Pl1 OR_OP Pl2

   29 Pl2: Pl3
   30    | Pl2 AND_OP Pl3

   31 Pl3: Pl4
   32    | Pl3 '|' Pl4

   33 Pl4: Pl5
   34    | Pl4 '^' Pl5

   35 Pl5: Pl6
   36    | Pl5 '&' Pl6

   37 Pl6: Pl7
   38    | Pl6 EQUAL_TO_OP Pl7
   39    | Pl6 NOT_EQUAL_TO_OP Pl7

   40 Pl7: Pl8
   41    | Pl7 '<' Pl8
   42    | Pl7 LESS_THAN_EQUAL_TO_OP Pl8
   43    | Pl7 '>' Pl8
   44    | Pl7 GREATER_THAN_EQUAL_TO_OP Pl8

   45 Pl8: Pl9
   46    | Pl8 LEFT_SHIFT_OP Pl9
   47    | Pl8 RIGHT_SHIFT_OP Pl9

   48 Pl9: Pl10
   49    | Pl9 '+' Pl10
   50    | Pl9 '-' Pl10

   51 Pl10: Unary_expression
   52     | Pl10 '*' Unary_expression
   53     | Pl10 '/' Unary_expression
   54     | Pl10 '%' Unary_expression

   55 Unary_expression: '(' Type ')' Pl11
   56                 | Pl11

   57 Pl11: Pl12
   58     | INCR_OP Pl11
   59     | DECR_OP Pl11
   60     | SIZEOF '(' Pl11 ')'
   61     | SIZEOF '(' Type ')'
   62     | Unary_op Pl11

   63 Pl12: Basic_expression
   64     | Pl12 '[' Expression ']'
   65     | Pl12 '(' ')'
   66     | Pl12 '(' Expression_list ')'
   67     | Pl12 '.' IDENTIFIERS
   68     | Pl12 INCR_OP
   69     | Pl12 DECR_OP
   70     | Pl12 PTR_OP IDENTIFIERS

   71 Basic_expression: IDENTIFIERS
   72                 | INTEGER_CONSTANT
   73                 | FLOAT_CONSTANT
   74                 | CHARACTER_CONSTANT
   75                 | STRING_CONSTANT
   76                 | '(' Expression_list ')'

   77 Unary_op: '~'
   78         | '!'
   79         | '*'
   80         | '@'
   81         | '-'

   82 Type: CHAR
   83     | INT
   84     | BOOL
   85     | LONG
   86     | FLOAT
   87     | DOUBLE
   88     | VOID
   89     | SHORT
   90     | Struct

   91 Function: Type Declarator '(' Parameter_list ')' '{' Stmt '}'
   92         | Type Declarator '(' ')' '{' Stmt '}'

   93 Parameter_list: Parameter_list ',' Type Declarator
   94               | Type Declarator

   95 Struct: STRUCT IDENTIFIERS '{' Struct_declaration_list '}'

   96 Struct_declaration_list: Struct_declaration_list Type SS ';'
   97                        | Type SS ';'

   98 SS: SS ',' Declarator
   99   | Declarator

  100 Stmt: if_Stmt Stmt
  101     | while_Stmt Stmt
  102     | for_Stmt Stmt
  103     | Expression_list ';' Stmt
  104     | '{' Stmt '}' Stmt
  105     | ';' Stmt
  106     | CONTINUE ';' Stmt
  107     | BREAK ';' Stmt
  108     | RETURN ';' Stmt
  109     | RETURN Expression_list ';' Stmt
  110     | Declaration Stmt
  111     | %empty
  112     | error ';'

  113 if_Stmt: IF '(' Expression_list ')' '{' Stmt '}' ELSE '{' Stmt '}'
  114        | IF '(' Expression_list ')' '{' Stmt '}'

  115 for_Stmt: FOR '(' Expression_list ';' Expression_list ';' Expression_list ')' '{' Stmt '}'

  116 while_Stmt: WHILE '(' Expression_list ')' '{' Stmt '}'
  117           | WHILE '(' error ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 78
'%' (37) 54
'&' (38) 36
'(' (40) 20 55 60 61 65 66 76 91 92 113 114 115 116 117
')' (41) 20 55 60 61 65 66 76 91 92 113 114 115 116 117
'*' (42) 17 18 52 79
'+' (43) 49
',' (44) 6 7 12 13 24 93 98
'-' (45) 50 81
'.' (46) 67
'/' (47) 53
';' (59) 5 96 97 103 105 106 107 108 109 112 115
'<' (60) 41
'=' (61) 7 9 26
'>' (62) 43
'@' (64) 80
'[' (91) 21 22 64
']' (93) 21 22 64
'^' (94) 34
'{' (123) 11 12 91 92 95 104 113 114 115 116
'|' (124) 32
'}' (125) 11 12 91 92 95 104 113 114 115 116
'~' (126) 77
error (256) 112 117
IF (258) 113 114
STRUCT (259) 95
VOID (260) 88
LONG (261) 85
SHORT (262) 89
CONTINUE (263) 106
BREAK (264) 107
WHILE (265) 116 117
ELSE (266) 113
SIZEOF (267) 60 61
RETURN (268) 108 109
DOUBLE (269) 87
FLOAT (270) 86
INT (271) 83
FOR (272) 115
CHAR (273) 82
BOOL (274) 84
IDENTIFIERS (275) 19 67 70 71 95
INTEGER_CONSTANT (276) 72
FLOAT_CONSTANT (277) 73
CHARACTER_CONSTANT (278) 74
STRING_CONSTANT (279) 75
RIGHT_SHIFT_OP (280) 47
LEFT_SHIFT_OP (281) 46
INCR_OP (282) 58 68
DECR_OP (283) 59 69
PTR_OP (284) 70
AND_OP (285) 30
OR_OP (286) 28
LESS_THAN_EQUAL_TO_OP (287) 42
GREATER_THAN_EQUAL_TO_OP (288) 44
EQUAL_TO_OP (289) 38
NOT_EQUAL_TO_OP (290) 39
TEMPPREC (291)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
Program (61)
    on left: 1, on right: 0
Program_element (62)
    on left: 2 3 4, on right: 1 2 3
Declaration (63)
    on left: 5, on right: 3 110
Declarator_list (64)
    on left: 6 7 8 9, on right: 5 6 7
Initializer (65)
    on left: 10 11 12, on right: 7 9 13 14
Initializer_list (66)
    on left: 13 14, on right: 11 12 13
Declarator (67)
    on left: 15 16, on right: 6 7 8 9 20 91 92 93 94 98 99
Pointer (68)
    on left: 17 18, on right: 15 18
Simple_declarator (69)
    on left: 19 20 21 22, on right: 15 16 21 22
Expression_list (70)
    on left: 23 24, on right: 24 66 76 103 109 113 114 115 116
Expression (71)
    on left: 25 26, on right: 10 22 23 24 26 64
Pl1 (72)
    on left: 27 28, on right: 25 28
Pl2 (73)
    on left: 29 30, on right: 27 28 30
Pl3 (74)
    on left: 31 32, on right: 29 30 32
Pl4 (75)
    on left: 33 34, on right: 31 32 34
Pl5 (76)
    on left: 35 36, on right: 33 34 36
Pl6 (77)
    on left: 37 38 39, on right: 35 36 38 39
Pl7 (78)
    on left: 40 41 42 43 44, on right: 37 38 39 41 42 43 44
Pl8 (79)
    on left: 45 46 47, on right: 40 41 42 43 44 46 47
Pl9 (80)
    on left: 48 49 50, on right: 45 46 47 49 50
Pl10 (81)
    on left: 51 52 53 54, on right: 48 49 50 52 53 54
Unary_expression (82)
    on left: 55 56, on right: 26 51 52 53 54
Pl11 (83)
    on left: 57 58 59 60 61 62, on right: 55 56 58 59 60 62
Pl12 (84)
    on left: 63 64 65 66 67 68 69 70, on right: 57 64 65 66 67 68 69
    70
Basic_expression (85)
    on left: 71 72 73 74 75 76, on right: 63
Unary_op (86)
    on left: 77 78 79 80 81, on right: 62
Type (87)
    on left: 82 83 84 85 86 87 88 89 90, on right: 5 55 61 91 92 93
    94 96 97
Function (88)
    on left: 91 92, on right: 2
Parameter_list (89)
    on left: 93 94, on right: 91 93
Struct (90)
    on left: 95, on right: 90
Struct_declaration_list (91)
    on left: 96 97, on right: 95 96
SS (92)
    on left: 98 99, on right: 96 97 98
Stmt (93)
    on left: 100 101 102 103 104 105 106 107 108 109 110 111 112, on right:
    91 92 100 101 102 103 104 105 106 107 108 109 110 113 114 115 116
if_Stmt (94)
    on left: 113 114, on right: 100
for_Stmt (95)
    on left: 115, on right: 102
while_Stmt (96)
    on left: 116 117, on right: 101


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    VOID    shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    FLOAT   shift, and go to state 6
    INT     shift, and go to state 7
    CHAR    shift, and go to state 8
    BOOL    shift, and go to state 9

    $default  reduce using rule 4 (Program_element)

    Program          go to state 10
    Program_element  go to state 11
    Declaration      go to state 12
    Type             go to state 13
    Function         go to state 14
    Struct           go to state 15


State 1

   95 Struct: STRUCT . IDENTIFIERS '{' Struct_declaration_list '}'

    IDENTIFIERS  shift, and go to state 16


State 2

   88 Type: VOID .

    $default  reduce using rule 88 (Type)


State 3

   85 Type: LONG .

    $default  reduce using rule 85 (Type)


State 4

   89 Type: SHORT .

    $default  reduce using rule 89 (Type)


State 5

   87 Type: DOUBLE .

    $default  reduce using rule 87 (Type)


State 6

   86 Type: FLOAT .

    $default  reduce using rule 86 (Type)


State 7

   83 Type: INT .

    $default  reduce using rule 83 (Type)


State 8

   82 Type: CHAR .

    $default  reduce using rule 82 (Type)


State 9

   84 Type: BOOL .

    $default  reduce using rule 84 (Type)


State 10

    0 $accept: Program . $end

    $end  shift, and go to state 17


State 11

    1 Program: Program_element .

    $default  reduce using rule 1 (Program)


State 12

    3 Program_element: Declaration . Program_element

    STRUCT  shift, and go to state 1
    VOID    shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    FLOAT   shift, and go to state 6
    INT     shift, and go to state 7
    CHAR    shift, and go to state 8
    BOOL    shift, and go to state 9

    $default  reduce using rule 4 (Program_element)

    Program_element  go to state 18
    Declaration      go to state 12
    Type             go to state 13
    Function         go to state 14
    Struct           go to state 15


State 13

    5 Declaration: Type . Declarator_list ';'
   91 Function: Type . Declarator '(' Parameter_list ')' '{' Stmt '}'
   92         | Type . Declarator '(' ')' '{' Stmt '}'

    IDENTIFIERS  shift, and go to state 19
    '*'          shift, and go to state 20
    '('          shift, and go to state 21

    Declarator_list    go to state 22
    Declarator         go to state 23
    Pointer            go to state 24
    Simple_declarator  go to state 25


State 14

    2 Program_element: Function . Program_element

    STRUCT  shift, and go to state 1
    VOID    shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    FLOAT   shift, and go to state 6
    INT     shift, and go to state 7
    CHAR    shift, and go to state 8
    BOOL    shift, and go to state 9

    $default  reduce using rule 4 (Program_element)

    Program_element  go to state 26
    Declaration      go to state 12
    Type             go to state 13
    Function         go to state 14
    Struct           go to state 15


State 15

   90 Type: Struct .

    $default  reduce using rule 90 (Type)


State 16

   95 Struct: STRUCT IDENTIFIERS . '{' Struct_declaration_list '}'

    '{'  shift, and go to state 27


State 17

    0 $accept: Program $end .

    $default  accept


State 18

    3 Program_element: Declaration Program_element .

    $default  reduce using rule 3 (Program_element)


State 19

   19 Simple_declarator: IDENTIFIERS .

    $default  reduce using rule 19 (Simple_declarator)


State 20

   17 Pointer: '*' .
   18        | '*' . Pointer

    '*'  shift, and go to state 20

    $default  reduce using rule 17 (Pointer)

    Pointer  go to state 28


State 21

   20 Simple_declarator: '(' . Declarator ')'

    IDENTIFIERS  shift, and go to state 19
    '*'          shift, and go to state 20
    '('          shift, and go to state 21

    Declarator         go to state 29
    Pointer            go to state 24
    Simple_declarator  go to state 25


State 22

    5 Declaration: Type Declarator_list . ';'
    6 Declarator_list: Declarator_list . ',' Declarator
    7                | Declarator_list . ',' Declarator '=' Initializer

    ';'  shift, and go to state 30
    ','  shift, and go to state 31


State 23

    8 Declarator_list: Declarator .
    9                | Declarator . '=' Initializer
   91 Function: Type Declarator . '(' Parameter_list ')' '{' Stmt '}'
   92         | Type Declarator . '(' ')' '{' Stmt '}'

    '('  shift, and go to state 32
    '='  shift, and go to state 33

    $default  reduce using rule 8 (Declarator_list)


State 24

   15 Declarator: Pointer . Simple_declarator

    IDENTIFIERS  shift, and go to state 19
    '('          shift, and go to state 21

    Simple_declarator  go to state 34


State 25

   16 Declarator: Simple_declarator .
   21 Simple_declarator: Simple_declarator . '[' ']'
   22                  | Simple_declarator . '[' Expression ']'

    '['  shift, and go to state 35

    $default  reduce using rule 16 (Declarator)


State 26

    2 Program_element: Function Program_element .

    $default  reduce using rule 2 (Program_element)


State 27

   95 Struct: STRUCT IDENTIFIERS '{' . Struct_declaration_list '}'

    STRUCT  shift, and go to state 1
    VOID    shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    FLOAT   shift, and go to state 6
    INT     shift, and go to state 7
    CHAR    shift, and go to state 8
    BOOL    shift, and go to state 9

    Type                     go to state 36
    Struct                   go to state 15
    Struct_declaration_list  go to state 37


State 28

   18 Pointer: '*' Pointer .

    $default  reduce using rule 18 (Pointer)


State 29

   20 Simple_declarator: '(' Declarator . ')'

    ')'  shift, and go to state 38


State 30

    5 Declaration: Type Declarator_list ';' .

    $default  reduce using rule 5 (Declaration)


State 31

    6 Declarator_list: Declarator_list ',' . Declarator
    7                | Declarator_list ',' . Declarator '=' Initializer

    IDENTIFIERS  shift, and go to state 19
    '*'          shift, and go to state 20
    '('          shift, and go to state 21

    Declarator         go to state 39
    Pointer            go to state 24
    Simple_declarator  go to state 25


State 32

   91 Function: Type Declarator '(' . Parameter_list ')' '{' Stmt '}'
   92         | Type Declarator '(' . ')' '{' Stmt '}'

    STRUCT  shift, and go to state 1
    VOID    shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    FLOAT   shift, and go to state 6
    INT     shift, and go to state 7
    CHAR    shift, and go to state 8
    BOOL    shift, and go to state 9
    ')'     shift, and go to state 40

    Type            go to state 41
    Parameter_list  go to state 42
    Struct          go to state 15


State 33

    9 Declarator_list: Declarator '=' . Initializer

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 53
    '{'                 shift, and go to state 54
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Initializer       go to state 58
    Expression        go to state 59
    Pl1               go to state 60
    Pl2               go to state 61
    Pl3               go to state 62
    Pl4               go to state 63
    Pl5               go to state 64
    Pl6               go to state 65
    Pl7               go to state 66
    Pl8               go to state 67
    Pl9               go to state 68
    Pl10              go to state 69
    Unary_expression  go to state 70
    Pl11              go to state 71
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 34

   15 Declarator: Pointer Simple_declarator .
   21 Simple_declarator: Simple_declarator . '[' ']'
   22                  | Simple_declarator . '[' Expression ']'

    '['  shift, and go to state 35

    $default  reduce using rule 15 (Declarator)


State 35

   21 Simple_declarator: Simple_declarator '[' . ']'
   22                  | Simple_declarator '[' . Expression ']'

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 53
    ']'                 shift, and go to state 75
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Expression        go to state 76
    Pl1               go to state 60
    Pl2               go to state 61
    Pl3               go to state 62
    Pl4               go to state 63
    Pl5               go to state 64
    Pl6               go to state 65
    Pl7               go to state 66
    Pl8               go to state 67
    Pl9               go to state 68
    Pl10              go to state 69
    Unary_expression  go to state 70
    Pl11              go to state 71
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 36

   97 Struct_declaration_list: Type . SS ';'

    IDENTIFIERS  shift, and go to state 19
    '*'          shift, and go to state 20
    '('          shift, and go to state 21

    Declarator         go to state 77
    Pointer            go to state 24
    Simple_declarator  go to state 25
    SS                 go to state 78


State 37

   95 Struct: STRUCT IDENTIFIERS '{' Struct_declaration_list . '}'
   96 Struct_declaration_list: Struct_declaration_list . Type SS ';'

    STRUCT  shift, and go to state 1
    VOID    shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    FLOAT   shift, and go to state 6
    INT     shift, and go to state 7
    CHAR    shift, and go to state 8
    BOOL    shift, and go to state 9
    '}'     shift, and go to state 79

    Type    go to state 80
    Struct  go to state 15


State 38

   20 Simple_declarator: '(' Declarator ')' .

    $default  reduce using rule 20 (Simple_declarator)


State 39

    6 Declarator_list: Declarator_list ',' Declarator .
    7                | Declarator_list ',' Declarator . '=' Initializer

    '='  shift, and go to state 81

    $default  reduce using rule 6 (Declarator_list)


State 40

   92 Function: Type Declarator '(' ')' . '{' Stmt '}'

    '{'  shift, and go to state 82


State 41

   94 Parameter_list: Type . Declarator

    IDENTIFIERS  shift, and go to state 19
    '*'          shift, and go to state 20
    '('          shift, and go to state 21

    Declarator         go to state 83
    Pointer            go to state 24
    Simple_declarator  go to state 25


State 42

   91 Function: Type Declarator '(' Parameter_list . ')' '{' Stmt '}'
   93 Parameter_list: Parameter_list . ',' Type Declarator

    ','  shift, and go to state 84
    ')'  shift, and go to state 85


State 43

   60 Pl11: SIZEOF . '(' Pl11 ')'
   61     | SIZEOF . '(' Type ')'

    '('  shift, and go to state 86


State 44

   71 Basic_expression: IDENTIFIERS .

    $default  reduce using rule 71 (Basic_expression)


State 45

   72 Basic_expression: INTEGER_CONSTANT .

    $default  reduce using rule 72 (Basic_expression)


State 46

   73 Basic_expression: FLOAT_CONSTANT .

    $default  reduce using rule 73 (Basic_expression)


State 47

   74 Basic_expression: CHARACTER_CONSTANT .

    $default  reduce using rule 74 (Basic_expression)


State 48

   75 Basic_expression: STRING_CONSTANT .

    $default  reduce using rule 75 (Basic_expression)


State 49

   58 Pl11: INCR_OP . Pl11

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 87
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Pl11              go to state 88
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 50

   59 Pl11: DECR_OP . Pl11

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 87
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Pl11              go to state 89
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 51

   81 Unary_op: '-' .

    $default  reduce using rule 81 (Unary_op)


State 52

   79 Unary_op: '*' .

    $default  reduce using rule 79 (Unary_op)


State 53

   55 Unary_expression: '(' . Type ')' Pl11
   76 Basic_expression: '(' . Expression_list ')'

    STRUCT              shift, and go to state 1
    VOID                shift, and go to state 2
    LONG                shift, and go to state 3
    SHORT               shift, and go to state 4
    SIZEOF              shift, and go to state 43
    DOUBLE              shift, and go to state 5
    FLOAT               shift, and go to state 6
    INT                 shift, and go to state 7
    CHAR                shift, and go to state 8
    BOOL                shift, and go to state 9
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 53
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Expression_list   go to state 90
    Expression        go to state 91
    Pl1               go to state 60
    Pl2               go to state 61
    Pl3               go to state 62
    Pl4               go to state 63
    Pl5               go to state 64
    Pl6               go to state 65
    Pl7               go to state 66
    Pl8               go to state 67
    Pl9               go to state 68
    Pl10              go to state 69
    Unary_expression  go to state 70
    Pl11              go to state 71
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74
    Type              go to state 92
    Struct            go to state 15


State 54

   11 Initializer: '{' . Initializer_list '}'
   12            | '{' . Initializer_list ',' '}'

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 53
    '{'                 shift, and go to state 54
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Initializer       go to state 93
    Initializer_list  go to state 94
    Expression        go to state 59
    Pl1               go to state 60
    Pl2               go to state 61
    Pl3               go to state 62
    Pl4               go to state 63
    Pl5               go to state 64
    Pl6               go to state 65
    Pl7               go to state 66
    Pl8               go to state 67
    Pl9               go to state 68
    Pl10              go to state 69
    Unary_expression  go to state 70
    Pl11              go to state 71
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 55

   77 Unary_op: '~' .

    $default  reduce using rule 77 (Unary_op)


State 56

   78 Unary_op: '!' .

    $default  reduce using rule 78 (Unary_op)


State 57

   80 Unary_op: '@' .

    $default  reduce using rule 80 (Unary_op)


State 58

    9 Declarator_list: Declarator '=' Initializer .

    $default  reduce using rule 9 (Declarator_list)


State 59

   10 Initializer: Expression .

    $default  reduce using rule 10 (Initializer)


State 60

   25 Expression: Pl1 .
   28 Pl1: Pl1 . OR_OP Pl2

    OR_OP  shift, and go to state 95

    $default  reduce using rule 25 (Expression)


State 61

   27 Pl1: Pl2 .
   30 Pl2: Pl2 . AND_OP Pl3

    AND_OP  shift, and go to state 96

    $default  reduce using rule 27 (Pl1)


State 62

   29 Pl2: Pl3 .
   32 Pl3: Pl3 . '|' Pl4

    '|'  shift, and go to state 97

    $default  reduce using rule 29 (Pl2)


State 63

   31 Pl3: Pl4 .
   34 Pl4: Pl4 . '^' Pl5

    '^'  shift, and go to state 98

    $default  reduce using rule 31 (Pl3)


State 64

   33 Pl4: Pl5 .
   36 Pl5: Pl5 . '&' Pl6

    '&'  shift, and go to state 99

    $default  reduce using rule 33 (Pl4)


State 65

   35 Pl5: Pl6 .
   38 Pl6: Pl6 . EQUAL_TO_OP Pl7
   39    | Pl6 . NOT_EQUAL_TO_OP Pl7

    EQUAL_TO_OP      shift, and go to state 100
    NOT_EQUAL_TO_OP  shift, and go to state 101

    $default  reduce using rule 35 (Pl5)


State 66

   37 Pl6: Pl7 .
   41 Pl7: Pl7 . '<' Pl8
   42    | Pl7 . LESS_THAN_EQUAL_TO_OP Pl8
   43    | Pl7 . '>' Pl8
   44    | Pl7 . GREATER_THAN_EQUAL_TO_OP Pl8

    LESS_THAN_EQUAL_TO_OP     shift, and go to state 102
    GREATER_THAN_EQUAL_TO_OP  shift, and go to state 103
    '<'                       shift, and go to state 104
    '>'                       shift, and go to state 105

    $default  reduce using rule 37 (Pl6)


State 67

   40 Pl7: Pl8 .
   46 Pl8: Pl8 . LEFT_SHIFT_OP Pl9
   47    | Pl8 . RIGHT_SHIFT_OP Pl9

    RIGHT_SHIFT_OP  shift, and go to state 106
    LEFT_SHIFT_OP   shift, and go to state 107

    $default  reduce using rule 40 (Pl7)


State 68

   45 Pl8: Pl9 .
   49 Pl9: Pl9 . '+' Pl10
   50    | Pl9 . '-' Pl10

    '+'  shift, and go to state 108
    '-'  shift, and go to state 109

    $default  reduce using rule 45 (Pl8)


State 69

   48 Pl9: Pl10 .
   52 Pl10: Pl10 . '*' Unary_expression
   53     | Pl10 . '/' Unary_expression
   54     | Pl10 . '%' Unary_expression

    '*'  shift, and go to state 110
    '/'  shift, and go to state 111
    '%'  shift, and go to state 112

    $default  reduce using rule 48 (Pl9)


State 70

   26 Expression: Unary_expression . '=' Expression
   51 Pl10: Unary_expression .

    '='  shift, and go to state 113

    $default  reduce using rule 51 (Pl10)


State 71

   56 Unary_expression: Pl11 .

    $default  reduce using rule 56 (Unary_expression)


State 72

   57 Pl11: Pl12 .
   64 Pl12: Pl12 . '[' Expression ']'
   65     | Pl12 . '(' ')'
   66     | Pl12 . '(' Expression_list ')'
   67     | Pl12 . '.' IDENTIFIERS
   68     | Pl12 . INCR_OP
   69     | Pl12 . DECR_OP
   70     | Pl12 . PTR_OP IDENTIFIERS

    INCR_OP  shift, and go to state 114
    DECR_OP  shift, and go to state 115
    PTR_OP   shift, and go to state 116
    '('      shift, and go to state 117
    '['      shift, and go to state 118
    '.'      shift, and go to state 119

    $default  reduce using rule 57 (Pl11)


State 73

   63 Pl12: Basic_expression .

    $default  reduce using rule 63 (Pl12)


State 74

   62 Pl11: Unary_op . Pl11

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 87
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Pl11              go to state 120
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 75

   21 Simple_declarator: Simple_declarator '[' ']' .

    $default  reduce using rule 21 (Simple_declarator)


State 76

   22 Simple_declarator: Simple_declarator '[' Expression . ']'

    ']'  shift, and go to state 121


State 77

   99 SS: Declarator .

    $default  reduce using rule 99 (SS)


State 78

   97 Struct_declaration_list: Type SS . ';'
   98 SS: SS . ',' Declarator

    ';'  shift, and go to state 122
    ','  shift, and go to state 123


State 79

   95 Struct: STRUCT IDENTIFIERS '{' Struct_declaration_list '}' .

    $default  reduce using rule 95 (Struct)


State 80

   96 Struct_declaration_list: Struct_declaration_list Type . SS ';'

    IDENTIFIERS  shift, and go to state 19
    '*'          shift, and go to state 20
    '('          shift, and go to state 21

    Declarator         go to state 77
    Pointer            go to state 24
    Simple_declarator  go to state 25
    SS                 go to state 124


State 81

    7 Declarator_list: Declarator_list ',' Declarator '=' . Initializer

    SIZEOF              shift, and go to state 43
    IDENTIFIERS         shift, and go to state 44
    INTEGER_CONSTANT    shift, and go to state 45
    FLOAT_CONSTANT      shift, and go to state 46
    CHARACTER_CONSTANT  shift, and go to state 47
    STRING_CONSTANT     shift, and go to state 48
    INCR_OP             shift, and go to state 49
    DECR_OP             shift, and go to state 50
    '-'                 shift, and go to state 51
    '*'                 shift, and go to state 52
    '('                 shift, and go to state 53
    '{'                 shift, and go to state 54
    '~'                 shift, and go to state 55
    '!'                 shift, and go to state 56
    '@'                 shift, and go to state 57

    Initializer       go to state 125
    Expression        go to state 59
    Pl1               go to state 60
    Pl2               go to state 61
    Pl3               go to state 62
    Pl4               go to state 63
    Pl5               go to state 64
    Pl6               go to state 65
    Pl7               go to state 66
    Pl8               go to state 67
    Pl9               go to state 68
    Pl10              go to state 69
    Unary_expression  go to state 70
    Pl11              go to state 71
    Pl12              go to state 72
    Basic_expression  go to state 73
    Unary_op          go to state 74


State 82

   92 Function: Type Declarator '(' ')' '{' . Stmt '}'
